elearning.core/src/main/java/eapli/elearning/automaticformativeexammanagement/application/antlr/documents/QuestionParser.java
// Generated from C:/Users/ricar/IdeaProjects/sem4pi-22-23-58/elearning.core/src/main/java/eapli/elearning/automaticformativeexammanagement/application/antlr\Question.g4 by ANTLR 4.12.0
package eapli.elearning.automaticformativeexammanagement.application.antlr.documents;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class QuestionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, INT=21, FLOAT=22, WORD=23, WS=24;
	public static final int
		RULE_question = 0, RULE_matchingQuestion = 1, RULE_matchingquestionType = 2, 
		RULE_matchingalinea = 3, RULE_matchingsolution = 4, RULE_matchingcotacao = 5, 
		RULE_matchingquestionText = 6, RULE_matchingtext = 7, RULE_matchingnumber = 8, 
		RULE_multipleChoiceQuestion = 9, RULE_multiplequestionType = 10, RULE_multiplealinea = 11, 
		RULE_multiplesolution = 12, RULE_multiplecotacao = 13, RULE_multiplequestionText = 14, 
		RULE_multipletext = 15, RULE_multiplenumber = 16, RULE_selectMissingWordsQuestion = 17, 
		RULE_missingquestionType = 18, RULE_missingalinea = 19, RULE_missingsolution = 20, 
		RULE_missingcotacao = 21, RULE_missingquestion = 22, RULE_feedback = 23, 
		RULE_missingquestionText = 24, RULE_missingnumber = 25, RULE_trueFalseQuestion = 26, 
		RULE_tfquestionType = 27, RULE_tfsolution = 28, RULE_truefalseOptions = 29, 
		RULE_tfcotacao = 30, RULE_tfquestionText = 31, RULE_tfnumber = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"question", "matchingQuestion", "matchingquestionType", "matchingalinea", 
			"matchingsolution", "matchingcotacao", "matchingquestionText", "matchingtext", 
			"matchingnumber", "multipleChoiceQuestion", "multiplequestionType", "multiplealinea", 
			"multiplesolution", "multiplecotacao", "multiplequestionText", "multipletext", 
			"multiplenumber", "selectMissingWordsQuestion", "missingquestionType", 
			"missingalinea", "missingsolution", "missingcotacao", "missingquestion", 
			"feedback", "missingquestionText", "missingnumber", "trueFalseQuestion", 
			"tfquestionType", "tfsolution", "truefalseOptions", "tfcotacao", "tfquestionText", 
			"tfnumber"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'-'", "'MATCHING'", "'OP:'", "'RES:'", "'&'", "'Cotacao:'", "';'", 
			"'MULTIPLE_CHOICE'", "'MISSING_WORDS'", "'TRUE_OR_FALSE'", "'true'", 
			"'True'", "'TRUE'", "'false'", "'False'", "'FALSE'", "'T'", "'t'", "'F'", 
			"'f'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "INT", "FLOAT", 
			"WORD", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Question.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public QuestionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionContext extends ParserRuleContext {
		public MultipleChoiceQuestionContext multipleChoiceQuestion() {
			return getRuleContext(MultipleChoiceQuestionContext.class,0);
		}
		public MatchingQuestionContext matchingQuestion() {
			return getRuleContext(MatchingQuestionContext.class,0);
		}
		public SelectMissingWordsQuestionContext selectMissingWordsQuestion() {
			return getRuleContext(SelectMissingWordsQuestionContext.class,0);
		}
		public TrueFalseQuestionContext trueFalseQuestion() {
			return getRuleContext(TrueFalseQuestionContext.class,0);
		}
		public QuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionContext question() throws RecognitionException {
		QuestionContext _localctx = new QuestionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_question);
		try {
			setState(70);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				multipleChoiceQuestion();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				matchingQuestion();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 3);
				{
				setState(68);
				selectMissingWordsQuestion();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 4);
				{
				setState(69);
				trueFalseQuestion();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchingQuestionContext extends ParserRuleContext {
		public MatchingquestionTypeContext matchingquestionType() {
			return getRuleContext(MatchingquestionTypeContext.class,0);
		}
		public MatchingcotacaoContext matchingcotacao() {
			return getRuleContext(MatchingcotacaoContext.class,0);
		}
		public List<MatchingquestionTextContext> matchingquestionText() {
			return getRuleContexts(MatchingquestionTextContext.class);
		}
		public MatchingquestionTextContext matchingquestionText(int i) {
			return getRuleContext(MatchingquestionTextContext.class,i);
		}
		public List<MatchingalineaContext> matchingalinea() {
			return getRuleContexts(MatchingalineaContext.class);
		}
		public MatchingalineaContext matchingalinea(int i) {
			return getRuleContext(MatchingalineaContext.class,i);
		}
		public List<MatchingsolutionContext> matchingsolution() {
			return getRuleContexts(MatchingsolutionContext.class);
		}
		public MatchingsolutionContext matchingsolution(int i) {
			return getRuleContext(MatchingsolutionContext.class,i);
		}
		public FeedbackContext feedback() {
			return getRuleContext(FeedbackContext.class,0);
		}
		public MatchingQuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchingQuestion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMatchingQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMatchingQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMatchingQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchingQuestionContext matchingQuestion() throws RecognitionException {
		MatchingQuestionContext _localctx = new MatchingQuestionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_matchingQuestion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			matchingquestionType();
			setState(73);
			match(T__0);
			setState(75); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(74);
				matchingquestionText();
				}
				}
				setState(77); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WORD );
			setState(80); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(79);
				matchingalinea();
				}
				}
				setState(82); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__2 );
			setState(85); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(84);
				matchingsolution();
				}
				}
				setState(87); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__3 );
			setState(89);
			match(T__0);
			setState(90);
			matchingcotacao();
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WORD) {
				{
				setState(91);
				feedback();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchingquestionTypeContext extends ParserRuleContext {
		public MatchingquestionTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchingquestionType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMatchingquestionType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMatchingquestionType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMatchingquestionType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchingquestionTypeContext matchingquestionType() throws RecognitionException {
		MatchingquestionTypeContext _localctx = new MatchingquestionTypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_matchingquestionType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchingalineaContext extends ParserRuleContext {
		public List<MatchingtextContext> matchingtext() {
			return getRuleContexts(MatchingtextContext.class);
		}
		public MatchingtextContext matchingtext(int i) {
			return getRuleContext(MatchingtextContext.class,i);
		}
		public MatchingalineaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchingalinea; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMatchingalinea(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMatchingalinea(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMatchingalinea(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchingalineaContext matchingalinea() throws RecognitionException {
		MatchingalineaContext _localctx = new MatchingalineaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_matchingalinea);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(T__2);
			setState(98); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(97);
				matchingtext();
				}
				}
				setState(100); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WORD );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchingsolutionContext extends ParserRuleContext {
		public List<MatchingnumberContext> matchingnumber() {
			return getRuleContexts(MatchingnumberContext.class);
		}
		public MatchingnumberContext matchingnumber(int i) {
			return getRuleContext(MatchingnumberContext.class,i);
		}
		public MatchingsolutionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchingsolution; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMatchingsolution(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMatchingsolution(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMatchingsolution(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchingsolutionContext matchingsolution() throws RecognitionException {
		MatchingsolutionContext _localctx = new MatchingsolutionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_matchingsolution);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(T__3);
			setState(103);
			matchingnumber();
			setState(104);
			match(T__4);
			setState(105);
			matchingnumber();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchingcotacaoContext extends ParserRuleContext {
		public MatchingnumberContext matchingnumber() {
			return getRuleContext(MatchingnumberContext.class,0);
		}
		public MatchingcotacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchingcotacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMatchingcotacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMatchingcotacao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMatchingcotacao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchingcotacaoContext matchingcotacao() throws RecognitionException {
		MatchingcotacaoContext _localctx = new MatchingcotacaoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_matchingcotacao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(T__5);
			setState(108);
			matchingnumber();
			setState(109);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchingquestionTextContext extends ParserRuleContext {
		public MatchingtextContext matchingtext() {
			return getRuleContext(MatchingtextContext.class,0);
		}
		public MatchingquestionTextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchingquestionText; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMatchingquestionText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMatchingquestionText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMatchingquestionText(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchingquestionTextContext matchingquestionText() throws RecognitionException {
		MatchingquestionTextContext _localctx = new MatchingquestionTextContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_matchingquestionText);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			matchingtext();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchingtextContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(QuestionParser.WORD, 0); }
		public MatchingtextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchingtext; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMatchingtext(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMatchingtext(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMatchingtext(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchingtextContext matchingtext() throws RecognitionException {
		MatchingtextContext _localctx = new MatchingtextContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_matchingtext);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchingnumberContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(QuestionParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(QuestionParser.FLOAT, 0); }
		public MatchingnumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchingnumber; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMatchingnumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMatchingnumber(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMatchingnumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchingnumberContext matchingnumber() throws RecognitionException {
		MatchingnumberContext _localctx = new MatchingnumberContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_matchingnumber);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_la = _input.LA(1);
			if ( !(_la==INT || _la==FLOAT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MultipleChoiceQuestionContext extends ParserRuleContext {
		public MultiplequestionTypeContext multiplequestionType() {
			return getRuleContext(MultiplequestionTypeContext.class,0);
		}
		public MultiplecotacaoContext multiplecotacao() {
			return getRuleContext(MultiplecotacaoContext.class,0);
		}
		public List<MultiplequestionTextContext> multiplequestionText() {
			return getRuleContexts(MultiplequestionTextContext.class);
		}
		public MultiplequestionTextContext multiplequestionText(int i) {
			return getRuleContext(MultiplequestionTextContext.class,i);
		}
		public List<MultiplealineaContext> multiplealinea() {
			return getRuleContexts(MultiplealineaContext.class);
		}
		public MultiplealineaContext multiplealinea(int i) {
			return getRuleContext(MultiplealineaContext.class,i);
		}
		public List<MultiplesolutionContext> multiplesolution() {
			return getRuleContexts(MultiplesolutionContext.class);
		}
		public MultiplesolutionContext multiplesolution(int i) {
			return getRuleContext(MultiplesolutionContext.class,i);
		}
		public FeedbackContext feedback() {
			return getRuleContext(FeedbackContext.class,0);
		}
		public MultipleChoiceQuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multipleChoiceQuestion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMultipleChoiceQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMultipleChoiceQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMultipleChoiceQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultipleChoiceQuestionContext multipleChoiceQuestion() throws RecognitionException {
		MultipleChoiceQuestionContext _localctx = new MultipleChoiceQuestionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_multipleChoiceQuestion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			multiplequestionType();
			setState(118);
			match(T__0);
			setState(120); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(119);
				multiplequestionText();
				}
				}
				setState(122); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 14680064L) != 0) );
			setState(125); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(124);
				multiplealinea();
				}
				}
				setState(127); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__2 );
			setState(130); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(129);
				multiplesolution();
				}
				}
				setState(132); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__3 );
			setState(134);
			match(T__0);
			setState(135);
			multiplecotacao();
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WORD) {
				{
				setState(136);
				feedback();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MultiplequestionTypeContext extends ParserRuleContext {
		public MultiplequestionTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiplequestionType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMultiplequestionType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMultiplequestionType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMultiplequestionType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultiplequestionTypeContext multiplequestionType() throws RecognitionException {
		MultiplequestionTypeContext _localctx = new MultiplequestionTypeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_multiplequestionType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MultiplealineaContext extends ParserRuleContext {
		public List<MultipletextContext> multipletext() {
			return getRuleContexts(MultipletextContext.class);
		}
		public MultipletextContext multipletext(int i) {
			return getRuleContext(MultipletextContext.class,i);
		}
		public MultiplealineaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiplealinea; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMultiplealinea(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMultiplealinea(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMultiplealinea(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultiplealineaContext multiplealinea() throws RecognitionException {
		MultiplealineaContext _localctx = new MultiplealineaContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_multiplealinea);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(T__2);
			setState(143); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(142);
				multipletext();
				}
				}
				setState(145); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WORD );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MultiplesolutionContext extends ParserRuleContext {
		public MultiplenumberContext multiplenumber() {
			return getRuleContext(MultiplenumberContext.class,0);
		}
		public MultiplesolutionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiplesolution; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).enterMultiplesolution(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QuestionListener ) ((QuestionListener)listener).exitMultiplesolution(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof QuestionVisitor ) return ((QuestionVisitor<? extends T>)visitor).visitMultiplesolution(this);
			else return visitor.visitChildren(this);
		}
	}
